# qmk_firmware

./: .gitignore  shell.nix
keyboards/crkbd/keymaps/Shrimpy48/: callumbed.json  config.h  keymap.c  mixed.json  rgb_matrix_user.inc  rules.mk  snek.c  unity.json
keyboards/crkbd/keymaps/ShrimpyHRM/: config.h  keymap.c  rules.mk
keyboards/crkbd/rev1/: rules.mk
keyboards/crkbd/rev1/keymaps/Shrimpy48/: callumbed.json  config.h  keymap.c  mixed.json  oneshot.h  rgb_matrix_user.inc  rules.mk  snek.c  snek.h  tmp.c
keyboards/ferris/keymaps/Shrimpy48/: config.h  keymap.c  keymap.json  rules.mk
qmk_steno/: .gitignore  Cargo.toml  build.rs  qmk_steno.h  shell.nix
qmk_steno/src/: interface.rs  lib.rs  queue.rs
